Bug #37092 Failed create table due to too small rope pool, crash cluster on next create tab
Submitted: 30 May 2008 9:56 Modified: 30 May 2008 17:18
Reporter: Jonas Oreland
Status: Closed
Category:Server: Cluster Severity:S3 (Non-critical)
Version: OS:Any
Assigned to: Jonas Oreland Target Version:

[30 May 2008 9:56] Jonas Oreland
Description:
If a create table failed already in dict,
then the table object was left pending

and a subsequent create table, would find it, and ndbrequire(false)

so, it's not only rope pool shortage that will lead to this...

How to repeat:
test added to testDict
[30 May 2008 10:03] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/47241

ChangeSet@1.2612, 2008-05-30 10:03:55+02:00, jonas@perch.ndb.mysql.com +4 -0
  ndb - bug#37092
        fix leaks/crashes that could occur in/after table-parse in master
[30 May 2008 11:15] Bugs System
Pushed into 5.1.24-ndb-6.3.16
[30 May 2008 15:22] Bugs System
Pushed into 5.1.23-ndb-6.4.0
[30 May 2008 15:25] Bugs System
Pushed into 5.1.24-ndb-6.2.16
[30 May 2008 17:18] Jon Stephens
Documented bugfix in the 5.1.24-ndb-6.2.16 and 5.1.24-ndb-6.3.15 changelogs as follows:

        Under some circumstances, a failed CREATE TABLE could mean that
        subsequent CREATE TABLE statements caused node failures.

(Verified with Jonas that fix was pushed to 6.3.15, not 6.3.16.)
[13 Dec 2008 0:28] Bugs System
Pushed into 6.0.6-alpha  (revid:sp1r-jonas@perch.ndb.mysql.com-20080530080355-23381)
(version source revid:jonas@mysql.com-20080808094047-4e1yiarqa2t3opg3) (pib:5)