ndb - bug#37092       fix leaks/crashes that could occur in/after table-parse in master